<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/header"
                android:textSize="24dp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightText"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginLeft="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp">

            <Spinner
                android:id="@+id/weight_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:entries="@array/weightUnits" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="188dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/weight_hint"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/heightText"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp">

            <Spinner
                android:id="@+id/height_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:entries="@array/heightUnits"/>

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/height_hint"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bname"
                android:onClick="calculat_BMI"/>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>